syntax = "proto3";

package test;

import "proto-student/student.proto";

option go_package= "github.com/tizor98/proto-primer/proto-test";

service TestService {
  rpc GetTest(GetTestRequest) returns (Test);
  rpc SetTest(Test) returns (SetTestResponse);
  rpc SetQuestions(stream Question) returns (ClientStreamResponse);
  rpc EnrollStudents(stream EnrollmentRequest) returns (ClientStreamResponse);
  rpc GetStudentsPerTest(GetStudentPerTestRequest) returns (stream student.Student);
  rpc TakeTest(stream TakeTestRequest) returns (stream TakeTestResponse);
}

message Test {
  string id = 1;
  string name = 2;
}

message GetTestRequest {
  string id = 1;
}

message SetTestResponse {
  string id = 1;
  string name = 2;
}

message Question {
  string id = 1;
  string answer = 2;
  string question = 3;
  string testId = 4;
}

message ClientStreamResponse {
  bool ok = 1;
}

message EnrollmentRequest {
  string studentId = 1;
  string testId = 2;
}

message GetStudentPerTestRequest {
  string testId = 1;
}

message TakeTestRequest {
  oneof takeTest {
    string testId = 1;
    string answer = 4;
  }
}

enum TEST_STATUS {
  PASS=0;
  FAIL=1;
}

message TakeTestResults {
  ANSWER_STATUS prev_answer=42;
  int32 totalPoints=1;
  int32 totalQuestions=2;
  TEST_STATUS status=3;
}

enum ANSWER_STATUS {
  CORRECT=0;
  INCORRECT=1;
}

message TakeTestQuestion {
  string questionId=1;
  string question=2;
  int32 currentQuestion=3;
  int32 totalQuestions=4;
  ANSWER_STATUS prev_answer = 5;
}

message TakeTestResponse {
  oneof takeTest {
    TakeTestQuestion question=1;
    TakeTestResults results=2;
  }
}
